Implemented a lot shit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,11 @@
     <string name="log_out">Wyloguj</string>
     <string name="register">Zarejestruj</string>
     <string name="have_no_account_then_register">Nie posiadasz jeszcze konta? \n <u>Zarejestruj się.</u></string>
-
+    <string name="chat">Czat</string>
+    <string name="search_people">Szukaj ludzi</string>
+    <string name="my_conversations">Moje rozmowy</string>
     <string name="login">Login</string>
     <string name="password">Hasło</string>
     <string name="repeat_password">Powtórz hasło</string>
-
-
+    <string name="you_have_been_logged_out">Zostałeś wylogowany</string>
 </resources>
